test/visibility/private/lydia/outsideModule2.good
outsideModule2.chpl:1: warning: Most visible 'anotherModule' is an inaccessible private symbol, defined at:
 ./anotherModule.chpl:1
outsideModule2.chpl:1: error: Cannot find module 'anotherModule'
